# fdcm

./: .gitignore  CMakeLists.txt  README.md  make.m  mex_fdcm_detect.cpp  para_line_fitter.txt  para_line_matcher.txt  para_template_line_fitter.txt  run.sh
Template/: realDoorGH.obj.pgm
include/Fdcm/: DetWind.h  EIEdgeImage.h  LMDetWind.h  LMLineMatcher.h  directional_integral_distance_image.h  display.h  distance_image.h  edge_image.h  line_matcher.h  non_maximum_suppression.h
include/Fitline/: line_fitter.h
include/Image/: Image.h  ImageDraw.h  ImageIO.h
src/Fdcm/: EIEdgeImage.cpp  LMDirectionalIntegralDistanceImage.cpp  LMDisplay.cpp  LMDistanceImage.cpp  LMLineMatcher.cpp  LMNonMaximumSuppression.cpp  MatchingCostMap.cpp  directional_integral_distance_image.cpp  display.cpp  distance_image.cpp  edge_image.cpp  edge_map.cpp  fdcm.cpp  line_matcher.cpp  matching_cost_map.cpp  non_maximum_suppression.cpp
src/Fitline/: LFLineFitter.cpp  LFLineSegment.cpp  fitline.cpp  line_fitter.cpp  line_segment.cpp
src/Image/: DistanceTransform.cpp  distance_transform.cpp
